tests/baselines/reference/emitArrowFunctionWhenUsingArguments06(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments06.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments06.ts (1 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => () => arguments;
    }